--- a/patient-view-fe/src/components/body/body.component.css
+++ b/patient-view-fe/src/components/body/body.component.css
@@ -1,15 +1,24 @@
 .card-area {
-    background-color: rgb(163, 194, 194);
-    position: fixed;
-    width: 80%;
-    height: 100%;
+  background-color: rgb(163, 194, 194);
+  position: fixed;
+  width: 80%;
+  height: 100%;
 }
 
 .work-panel {
-    background-color: rgb(133, 173, 173);
-    position: fixed;
-    top: 50px;
-    left: 80%;
-    width: 20%;
-    height: 100%;
+  background-color: rgb(133, 173, 173);
+  position: fixed;
+  top: 50px;
+  left: 80%;
+  width: 20%;
+  height: 100%;
+}
+.chief-complaint > div > div {
+  text-align: left;
+  position: inherit;
+  height: auto;
+  width: auto;
+}
+.chief-complaint-color {
+  background-color: #eaeffa;
 }
