--- a/patient-view-fe/src/components/body/body.component.css
+++ b/patient-view-fe/src/components/body/body.component.css
@@ -3,6 +3,7 @@
   position: fixed;
   width: 80%;
   height: 100%;
+  overflow-y: auto;
 }
 
 .work-panel {
@@ -12,13 +13,4 @@
   left: 80%;
   width: 20%;
   height: 100%;
-}
-.chief-complaint > div > div {
-  text-align: left;
-  position: inherit;
-  height: auto;
-  width: auto;
-}
-.chief-complaint-color {
-  background-color: #eaeffa;
 }
