final touches for the project

--- a/patient-view-fe/src/components/header/header.component.css
+++ b/patient-view-fe/src/components/header/header.component.css
@@ -1,4 +1,7 @@
 .header {
-  background-color: rgb(102, 153, 153);
+  background-color: #c8def5;
   height: 65px;
+}
+.header > div > div {
+  background-color: #c8def5;
 }
