--- a/patient-view-fe/src/components/body/body.component.css
+++ b/patient-view-fe/src/components/body/body.component.css
@@ -1,16 +1,18 @@
 .card-area {
-  background-color: rgb(163, 194, 194);
+  background-color: #8db0cd;
   position: fixed;
   width: 80%;
   height: 100%;
   overflow-y: auto;
+  bottom: 0;
+  top: 65px;
 }
 
 .work-panel {
-  background-color: rgb(133, 173, 173);
+  background-color: #8db0cd;
   position: fixed;
-  top: 50px;
+
   left: 80%;
   width: 20%;
-  height: 100%;
+  height: calc(100% - 65px);
 }
